--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-lottie": "^1.2.3",
     "react-otp-input": "^2.4.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
